welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:58: error: Unmatched closing brace '}' ignored here
}
^